k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: solid-pancake-jaeger
spec:
  type: ClusterIP
  selector:
    app: solid-pancake-jaeger
  ports:
    - protocol: TCP
      port: 14250
    - protocol: TCP
      port: 16686
